k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-frontend-svc
spec:
  selector:
    app: kube-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
