k8s/issuance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuance-svc
spec:
  selector:
    app: issuance
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
