k8s/verification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verification-svc
spec:
  selector:
    app: verification
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
